--- a/manifest.json
+++ b/manifest.json
@@ -13,8 +13,9 @@
       "type": "image/png"
     }
   ],
-  "start_url": "index.html",
+  "start_url": "index (1).html",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000"
+
 }
